syntax = "proto3";
package org.naru;

enum OrderState {
    UNPROCESSED_ORDER = 0;
    PROCESSING_ORDER = 1;
    READY_ORDER = 2;
    DELIVERED_ORDER = 3;
    CANCELED_ORDER = 4;
}

message Beacon {
    string id = 1;
    string id1 = 2;
    string id2 = 3;
    string id3 = 4;
    string description = 5;
}

message RequestImage {
    string id = 1;
    string description = 2;
    string base64 = 3;
    string name = 4;
    string user_owner = 5;
}

message ExpectedAnswer {
    string id = 1;
    string value = 2;
    int32 index = 3;
    bool has_price = 4;
    double price = 5;
    ProductDetail product_detail = 6 [weak = true];
}

message Question {
    string id = 1;
    int32 form_order = 2;
    string display = 3;
    RequestImage image = 4 [weak = true];
    repeated ExpectedAnswer expected_answers = 5;
    bool display_question_in_summary = 6;
}

message QuestionAnswer {
    string id = 1;
    Question question = 2 [weak = true];
    ExpectedAnswer answer = 3 [weak = true];
}

message FormQuestions {
    string id = 1;
    Form form = 2 [weak = true];
    repeated QuestionAnswer answers = 3;
    int64 date_recorded = 4;
    string token = 5;
    string user_id = 6;
}

message FormQuestionsGroup {
    string id = 1;
    string form_name = 2;
    repeated FormQuestions form_questions = 3;
    View view = 4 [weak = true];
}

message Order {
    string id = 1;
    int64 date_recorded = 5;
    string date_recorded_display = 6;
    repeated FormQuestionsGroup form_questions_groups = 7;
    string user_id = 8;
    double amount_total = 9;
    int64 time_ready = 11;
    string time_ready_display = 12;
    int64 time_delivered = 14;
    string time_delivered_display = 15;
    Beacon checkout_beacon = 17 [weak = true];
    string organization_id = 18;
    OrderState order_state = 19;
    int64 time_processing = 20;
    string time_processing_display = 21;
    int64 time_canceled = 22;
    string time_canceled_display = 23;
    string google_id = 24;
    string apple_id = 25;
}

message Validation {
    string id = 1;
    string name = 2;
    string value = 3;
}

message HeuristicCombiner {
    string id = 1;
    enum Type {
        AND = 0;
        OR = 1;
    }
    Type type = 2;
    HeuristicCombiner first_combiner = 5 [weak = true];
    HeuristicCombiner second_combiner = 8 [weak = true];
    string display = 9;
    Question first_question = 10 [weak = true];
    Validation first_validation = 11 [weak = true];
    Question second_question = 12 [weak = true];
    Validation second_validation = 13 [weak = true];
}

message Form {
    string id = 1;
    string display = 2;
    RequestImage image = 3 [weak = true];
    repeated Question questions = 4;
    repeated Heuristic heuristics = 5;
    int32 order = 6;
    ProductDetail product_detail = 7 [weak = true];
}

message View {
    string id = 1;
    RequestImage background_image = 2 [weak = true];
    string title = 3;
    string description = 4;
    repeated Form forms = 5;
    View parent = 7 [weak = true];
    int64 start_date = 8;
    int64 expire_date = 9;
}

message Heuristic {
    string id = 1;
    string description = 2;
    repeated HeuristicCombiner heuristic_combiners = 3;
    enum HeuristicGroupType {
        BUTTON = 0;
        CHECKOUT = 1;
    }
    HeuristicGroupType heuristic_group_type = 4;
    View next_view = 7 [weak = true];
    Beacon checkout_beacon = 8 [weak = true];
}

message Request {
    string id = 1;
    string name = 2;
    repeated View views = 4;
    View root_view = 5 [weak = true];
    string user_owner = 6;
    Beacon incoming_beacon = 7 [weak = true];
    Beacon checkout_beacon = 8 [weak = true];
    bool is_active = 9;
    Organization organization = 10 [weak = true];
    repeated Validation validations = 11;
}

message Organization {
    string id = 1;
    string name = 2;
    string android_app_name = 3;
    string ios_app_name = 4;
    repeated OrganizationUser users = 5;
    repeated ProductDetail product_details = 6;
}

message OrganizationUser {
    string id = 1;
    string user_name = 2;
    string organization_id = 3;
}

message ProductDetail {
    string id = 1;
    string item_type = 2;
    string product_id = 3;
    string type = 4;
    string title = 6;
    string description = 7;
    double product_price = 8;
}

message UINaruRequest {
    string token = 1;
    Beacon beacon = 3;
    string user_id = 4;
    string view_id = 5;
    string android_app_name = 6;
    string ios_app_name = 7;
    Order order = 8;
    string organization_id = 9;
    string google_id = 10;
    string apple_id = 11;
}

message UINaruResponse {
    bool successful = 1;
    Request request = 2;
    View view = 3;
    Organization organization = 4;
    repeated Order orders = 5;
}

message UINaruAdminRequest {
    string token = 1;
    Beacon beacon = 3;
    Request request = 4;
    string user_id = 5;
    View view = 6;
    repeated RequestImage images = 7;
    int64 date = 9;
    Order order = 10;
    Organization organization = 11;
    string android_app_name = 12;
    string ios_app_name = 13;
}

message UINaruAdminResponse {
    repeated Request requests = 1;
    repeated Beacon beacons = 2;
    repeated View views = 3;
    repeated RequestImage images = 4;
    repeated Order orders = 6;
    repeated Organization organizations = 7;
}

message UINaruOrganizationRequest {
    string token = 1;
    string organization_id = 2;
    Order order = 3;
}

message UINaruOrganizationResponse {
    repeated Order orders = 1;
    repeated Organization organizations = 2;
}